projects/rylogic/Rylogic.Gfx/src/View3d/View3d.cs


		// Return the context id that this object belongs to
		[DllImport(Dll)] private static extern Guid View3D_ObjectContextIdGet(HObject obj);

		// Return the root object of 'object'(possibly itself)
		[DllImport(Dll)] private static extern HObject View3D_ObjectGetRoot(HObject obj);

		// Return the immediate parent of 'object'
		[DllImport(Dll)] private static extern HObject View3D_ObjectGetParent(HObject obj);

		// Return a child object of 'object'
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern HObject View3D_ObjectGetChildByName(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string name);
		[DllImport(Dll)] private static extern HObject View3D_ObjectGetChildByIndex(HObject obj, int index);

		// Return the number of child objects of 'object'
		[DllImport(Dll)] private static extern int View3D_ObjectChildCount(HObject obj);

		// Enumerate the child objects of 'object'. (Not recursive)
		[DllImport(Dll)] private static extern void View3D_ObjectEnumChildren(HObject obj, EnumObjectsCB enum_objects_cb);

		// Get/Set the name of 'object'
		[DllImport(Dll, CharSet = CharSet.Unicode)][return: MarshalAs(UnmanagedType.BStr)] private static extern string View3D_ObjectNameGetBStr(HObject obj);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectNameSet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string name);

		// Get the type of 'object'
		[DllImport(Dll, CharSet = CharSet.Unicode)][return: MarshalAs(UnmanagedType.BStr)] private static extern string View3D_ObjectTypeGetBStr(HObject obj);

		// Get/Set the current or base colour of an object(the first object to match 'name') (See LdrObject::Apply)
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern uint View3D_ObjectColourGet(HObject obj, bool base_colour, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectColourSet(HObject obj, bool base_colour, uint colour, [MarshalAs(UnmanagedType.LPStr)] string? name, EColourOp op, float op_value);

		// Reset the object colour back to its default
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectResetColour(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Get/Set the object's o2w transform
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern m4x4 View3D_ObjectO2WGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectO2WSet(HObject obj, ref m4x4 o2w, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Get/Set the object to parent transform for an object.
		// This is the object to world transform for objects without parents.
		// Note: In "*Box b { 1 1 1 *o2w{*pos{1 2 3}} }" setting this transform overwrites the "*o2w{*pos{1 2 3}}".
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern m4x4 View3D_ObjectO2PGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectO2PSet(HObject obj, ref m4x4 o2p, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Return the model space bounding box for 'object'
		[DllImport(Dll)] private static extern BBox View3D_ObjectBBoxMS(HObject obj, bool include_children);

		// Get/Set the object visibility. See LdrObject::Apply for docs on the format of 'name'
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern bool View3D_ObjectVisibilityGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectVisibilitySet(HObject obj, bool visible, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Get/Set wireframe mode for an object (the first object to match 'name'). (See LdrObject::Apply)
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern bool View3D_ObjectWireframeGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectWireframeSet(HObject obj, bool wireframe, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Get/Set the object flags. See LdrObject::Apply for docs on the format of 'name'
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern ELdrFlags View3D_ObjectFlagsGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectFlagsSet(HObject obj, ELdrFlags flags, bool state, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Get/Set the reflectivity of an object (the first object to match 'name') (See LdrObject::Apply)
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern float View3D_ObjectReflectivityGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectReflectivitySet(HObject obj, float reflectivity, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Get/Set the sort group for the object or its children. (See LdrObject::Apply)
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern ESortGroup View3D_ObjectSortGroupGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectSortGroupSet(HObject obj, ESortGroup group, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Get/Set 'show normals' mode for an object (the first object to match 'name') (See LdrObject::Apply)
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern bool View3D_ObjectNormalsGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectNormalsSet(HObject obj, bool show, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Set the texture/sampler for all nuggets of 'object' or its children. (See LdrObject::Apply)
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectSetTexture(HObject obj, HTexture tex, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectSetSampler(HObject obj, HSampler sam, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Get/Set the nugget flags on an object or its children (See LdrObject::Apply)
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern ENuggetFlag View3D_ObjectNuggetFlagsGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name, int index);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectNuggetFlagsSet(HObject obj, ENuggetFlag flags, bool state, [MarshalAs(UnmanagedType.LPStr)] string? name, int index);

		// Get/Set the tint colour for a nugget within the model of an object or its children. (See LdrObject::Apply)
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern Colour32 View3D_ObjectNuggetTintGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name, int index);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectNuggetTintSet(HObject obj, Colour32 colour, [MarshalAs(UnmanagedType.LPStr)] string? name, int index);

		// Materials ******************************

		// Create a texture from data in memory.
		// Set 'data' to nullptr to leave the texture uninitialised, if not null then data must point to width x height pixel data
		// of the size appropriate for the given format. 'e.g. uint32_t px_data[width * height] for D3DFMT_A8R8G8B8'
		// Note: careful with stride, 'data' is expected to have the appropriate stride for BytesPerPixel(format) * width
		[DllImport(Dll)] private static extern HTexture View3D_TextureCreate(int width, int height, IntPtr data, int data_size, ref TextureOptions options);

		// Create one of the stock textures
		[DllImport(Dll)] private static extern HTexture View3D_TextureCreateStock(EStockTexture stock_texture);

		// Load a texture from file, embedded resource, or stock assets. Specify width == 0, height == 0 to use the dimensions of the file
		[DllImport(Dll)] private static extern HTexture View3D_TextureCreateFromUri([MarshalAs(UnmanagedType.LPStr)] string resource, int width, int height, ref TextureOptions options);

		// Load a cube map from file, embedded resource, or stock assets. Specify width == 0, height == 0 to use the dimensions of the file
		[DllImport(Dll)] private static extern HCubeMap View3D_CubeMapCreateFromUri([MarshalAs(UnmanagedType.LPStr)] string resource, ref CubeMapOptions options);

		// Create a texture sampler
		[DllImport(Dll)] private static extern HSampler View3D_SamplerCreate(ref SamplerOptions options);

		// Create one of the stock samplers
		[DllImport(Dll)] private static extern HSampler View3D_SamplerCreateStock(EStockSampler stock_sampler);

		// Create a shader
		[DllImport(Dll)] private static extern HSampler View3D_ShaderCreate(ref ShaderOptions options);

		// Create one of the stock shaders
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern HSampler View3D_ShaderCreateStock(EStockShader stock_shader, [MarshalAs(UnmanagedType.LPStr)] string config);

		// Read the properties of an existing texture
		[DllImport(Dll)] private static extern ImageInfo View3D_TextureGetInfo(HTexture tex);
		[DllImport(Dll)] private static extern EResult View3D_TextureGetInfoFromFile([MarshalAs(UnmanagedType.LPStr)] string tex_filepath, out ImageInfo info);

		// Release a reference to a resources
		[DllImport(Dll)] private static extern void View3D_TextureRelease(HTexture tex);
		[DllImport(Dll)] private static extern void View3D_CubeMapRelease(HCubeMap tex);
		[DllImport(Dll)] private static extern void View3D_SamplerRelease(HSampler sam);
		[DllImport(Dll)] private static extern void View3D_ShaderRelease(HShader shdr);

		// Resize this texture to 'size'
		[DllImport(Dll)] private static extern void View3D_TextureResize(HTexture tex, ulong width, uint height, ushort depth_or_array_len);

		// Return the ref count of 'tex'
		[DllImport(Dll)] private static extern ulong View3D_TextureRefCount(HTexture tex);

		// Get/Set the private data associated with 'guid' for 'tex'
		[DllImport(Dll)] private static extern void View3d_TexturePrivateDataGet(HTexture tex, Guid guid, ref uint size, IntPtr data);
		[DllImport(Dll)] private static extern void View3d_TexturePrivateDataSet(HTexture tex, Guid guid, uint size, IntPtr data);
		[DllImport(Dll)] private static extern void View3d_TexturePrivateDataIFSet(HTexture tex, Guid guid, IntPtr pointer);

		// Resolve a MSAA texture into a non-MSAA texture
		[DllImport(Dll)] private static extern void View3D_TextureResolveAA(HTexture dst, HTexture src);

		// Gizmos *********************************

		// Create the 3D manipulation gizmo
		[DllImport(Dll)] private static extern HGizmo View3D_GizmoCreate(Gizmo.EMode mode, ref m4x4 o2w);

		// Delete a 3D manipulation gizmo
		[DllImport(Dll)] private static extern void View3D_GizmoDelete(HGizmo gizmo);

		// Attach/Detach callbacks that are called when the gizmo moves
		[DllImport(Dll)] private static extern void View3D_GizmoMovedCBSet(HGizmo gizmo, GizmoMovedCB moved_cb, bool add);

		// Attach/Detach an object to the gizmo that will be moved as the gizmo moves
		[DllImport(Dll)] private static extern void View3D_GizmoAttach(HGizmo gizmo, HObject obj);
		[DllImport(Dll)] private static extern void View3D_GizmoDetach(HGizmo gizmo, HObject obj);

		// Get/Set the scale factor for the gizmo
		[DllImport(Dll)] private static extern float View3D_GizmoScaleGet(HGizmo gizmo);
		[DllImport(Dll)] private static extern void View3D_GizmoScaleSet(HGizmo gizmo, float scale);

		// Get/Set the current mode of the gizmo
		[DllImport(Dll)] private static extern Gizmo.EMode View3D_GizmoModeGet(HGizmo gizmo);
		[DllImport(Dll)] private static extern void View3D_GizmoModeSet(HGizmo gizmo, Gizmo.EMode mode);
